[package]
name = "bougie-installer"
version.workspace = true
edition = "2024"
description = "PHP runtime + extension installer for bougie."
license = "EUPL-1.2"
repository = "https://github.com/cresset-tools/bougie"
rust-version = "1.95"
authors.workspace = true

[dependencies.bougie-backend]
path = "../bougie-backend"
version = "0.5.0"

[dependencies.bougie-errors]
path = "../bougie-errors"
version = "0.5.0"

[dependencies.bougie-fetch]
path = "../bougie-fetch"
version = "0.5.0"

[dependencies.bougie-fs]
path = "../bougie-fs"
version = "0.5.0"

[dependencies.bougie-index]
path = "../bougie-index"
version = "0.5.0"

[dependencies.bougie-paths]
path = "../bougie-paths"
version = "0.5.0"

[dependencies.bougie-platform]
path = "../bougie-platform"
version = "0.5.0"

[dependencies.bougie-resolver]
path = "../bougie-resolver"
version = "0.5.0"

[dependencies.bougie-version]
path = "../bougie-version"
version = "0.5.0"

[dependencies.eyre]
version = "0.6"

[dependencies.reqwest]
version = "0.13"
default-features = false
features = ["blocking", "rustls"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]

[dependencies.sha2]
version = "0.11"

[dependencies.tempfile]
version = "3.10"

[dependencies.tracing]
version = "0.1"

[dev-dependencies.tempfile]
version = "3.10"

[lints]
workspace = true
