[package]
name = "bougie-installer"
version.workspace = true
edition = "2024"
description = "PHP runtime + extension installer for bougie."
license = "EUPL-1.2"
repository = "https://github.com/cresset-tools/bougie"
rust-version = "1.95"
authors.workspace = true

[dependencies]
bougie-backend = { workspace = true }
bougie-errors = { workspace = true }
bougie-fetch = { workspace = true }
bougie-fs = { workspace = true }
bougie-index = { workspace = true }
bougie-paths = { workspace = true }
bougie-platform = { workspace = true }
bougie-resolver = { workspace = true }
bougie-version = { workspace = true }

[dependencies.eyre]
version = "0.6"

[dependencies.reqwest]
version = "0.13"
default-features = false
features = ["blocking", "rustls"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]

[dependencies.sha2]
version = "0.11"

[dependencies.tempfile]
version = "3.10"

[dependencies.tracing]
version = "0.1"

[dev-dependencies.tempfile]
version = "3.10"

[lints]
workspace = true
