[package]
name = "bougie-installers"
version.workspace = true
edition = "2024"
description = "Native reimplementation of declarative Composer install plugins: magento/magento-composer-installer (extra.map copy + extra.chmod + vendor_path.php) and composer/installers (type to install-path remapping). Bougie never runs the plugins; it reproduces their effect."
license = "EUPL-1.2"
repository = "https://github.com/cresset-tools/bougie"
rust-version = "1.95"
authors.workspace = true

[dependencies]
eyre = "0.6"

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]

[dev-dependencies.tempfile]
version = "3.10"

[lints]
workspace = true
