[package]
name = "bougie-output"
version.workspace = true
edition = "2024"
description = "Text/JSON output channel + table rendering for bougie."
license = "EUPL-1.2"
repository = "https://github.com/cresset-tools/bougie"
rust-version = "1.95"
authors.workspace = true

[dependencies.bougie-cli]
path = "../bougie-cli"
version = "0.5.0"

[dependencies.anstream]
version = "1.0"

[dependencies.anstyle]
version = "1.0"

[dependencies.eyre]
version = "0.6"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]

[lints]
workspace = true
