[package]
name = "bougie-paths"
version = "0.4.0"
edition = "2024"
description = "XDG-strict path resolution (BOUGIE_HOME, BOUGIE_CACHE)."
license = "EUPL-1.2"
repository = "https://github.com/cresset-tools/bougie"
rust-version = "1.95"
authors.workspace = true

[dependencies.etcetera]
version = "0.11"

[dependencies.eyre]
version = "0.6"

[lints]
workspace = true
