[package]
name = "bougie-platform"
version.workspace = true
edition = "2024"
description = "Target-triple, binfmt, and ELF/Mach-O probing for bougie."
license = "EUPL-1.2"
repository = "https://github.com/cresset-tools/bougie"
rust-version = "1.95"
authors.workspace = true

[dependencies.bougie-errors]
path = "../bougie-errors"
version = "0.5.0"

[dependencies.eyre]
version = "0.6"

[lints]
workspace = true
