[package]
name = "bougie-recipe"
version.workspace = true
edition = "2024"
description = "Recipe engine for `bougie make` task automation."
license = "EUPL-1.2"
repository = "https://github.com/cresset-tools/bougie"
rust-version = "1.95"
authors.workspace = true

[dependencies.bougie-paths]
workspace = true

[dependencies.eyre]
version = "0.6"

[dependencies.rustix]
version = "1.0"
default-features = false
features = ["std", "fs"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]

[dependencies.thiserror]
version = "2.0"

[dependencies.tracing]
version = "0.1"

[dependencies.toml_edit]
version = "0.25"
features = ["serde"]

[dev-dependencies.tempfile]
version = "3.10"

[lints]
workspace = true
