[package]
name = "bougie-resolver"
version.workspace = true
edition = "2024"
description = "PHP + extension manifest resolver for bougie."
license = "EUPL-1.2"
repository = "https://github.com/cresset-tools/bougie"
rust-version = "1.95"
authors.workspace = true

[dependencies.bougie-errors]
path = "../bougie-errors"

[dependencies.bougie-index]
path = "../bougie-index"

[dependencies.bougie-version]
path = "../bougie-version"

[dependencies.eyre]
version = "0.6"

[lints]
workspace = true
