[package]
name = "bougie-resolver"
version.workspace = true
edition = "2024"
description = "PHP + extension manifest resolver for bougie."
license = "EUPL-1.2"
repository = "https://github.com/cresset-tools/bougie"
rust-version = "1.95"
authors.workspace = true

[dependencies.bougie-errors]
path = "../bougie-errors"
version = "0.5.0"

[dependencies.bougie-index]
path = "../bougie-index"
version = "0.5.0"

[dependencies.bougie-version]
path = "../bougie-version"
version = "0.5.0"

[dependencies.bougie-semver]
path = "../bougie-semver"
version = "0.1.0"

[dependencies.eyre]
version = "0.6"

[lints]
workspace = true
