[package]
name = "bougie-resolver"
version.workspace = true
edition = "2024"
description = "PHP + extension manifest resolver for bougie."
license = "EUPL-1.2"
repository = "https://github.com/cresset-tools/bougie"
rust-version = "1.95"
authors.workspace = true

[dependencies]
bougie-errors = { workspace = true }
bougie-index = { workspace = true }
bougie-version = { workspace = true }
composer-semver = { workspace = true }

[dependencies.eyre]
version = "0.6"

[lints]
workspace = true
