[package]
name = "bougie-scripts"
version.workspace = true
edition = "2024"
description = "Opt-in execution of root composer.json scripts: parse + classify entries (@php, @composer, @putenv, @alias, shell, callbacks) and dispatch lifecycle events. FS/PHP-agnostic — the host injects a ScriptContext. PHP-callback entries are warn-skipped except a host-registered native allowlist."
license = "EUPL-1.2"
repository = "https://github.com/cresset-tools/bougie"
rust-version = "1.95"
authors.workspace = true

[dependencies]
eyre = "0.6"
wait-timeout = "0.2"

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]

# Unix process-group kill on timeout: a timed-out script's whole tree is
# torn down, not just the shell. `nix` wraps the `killpg` syscall safely,
# keeping this crate free of `unsafe`.
[target.'cfg(unix)'.dependencies.nix]
version = "0.29"
features = ["signal"]

[dev-dependencies.tempfile]
version = "3.10"

[lints]
workspace = true
