[package]
name = "bougie-semver"
version = "0.1.0"
edition = "2024"
description = "Composer-flavored semver (Version, Constraint, Stability) shared between bougie's PHP/ext picker and the future Composer dep resolver."
license = "EUPL-1.2"
repository = "https://github.com/cresset-tools/bougie"
rust-version = "1.95"
authors.workspace = true

[dependencies.regex]
version = "1.11"
default-features = false
features = ["std", "perf", "unicode-perl", "unicode-case"]

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
