[package]
name = "bougie-tunnel-protocol"
version.workspace = true
edition = "2024"
description = "Wire protocol (length-prefixed JSON handshake frames) shared by the bougie tunnel client and relay."
license = "EUPL-1.2"
repository = "https://github.com/cresset-tools/bougie"
rust-version = "1.95"
authors.workspace = true

[dependencies.eyre]
version = "0.6"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.tokio]
version = "1"
default-features = false
features = ["io-util"]

[dev-dependencies.tokio]
version = "1"
default-features = false
features = ["rt", "macros"]

[lints]
workspace = true
