[package]
name = "bougie-tunnel"
version.workspace = true
edition = "2024"
description = "Outbound multiplexed tunnel client that exposes a local bougie store on a public relay."
license = "EUPL-1.2"
repository = "https://github.com/cresset-tools/bougie"
rust-version = "1.95"
authors.workspace = true

[dependencies.eyre]
version = "0.6"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.tokio]
version = "1"
default-features = false
features = ["rt-multi-thread", "net", "io-util", "macros", "time", "sync"]

# Raw client TLS (not reqwest): we need a rustls ClientConfig to verify the
# relay's public LE cert and hand the live stream to yamux. Pinned to the
# ring provider already in the tree (avoids pulling aws-lc-rs + a C toolchain).
[dependencies.tokio-rustls]
version = "0.26"
default-features = false
features = ["ring", "tls12", "logging"]

# `compat` bridges tokio's I/O traits <-> futures-io (yamux speaks futures-io).
[dependencies.tokio-util]
version = "0.7"
default-features = false
features = ["compat"]

[dependencies.rustls-pemfile]
version = "2"

[dependencies.webpki-roots]
version = "0.26"

[dependencies.yamux]
version = "0.13"

[dependencies.tracing]
version = "0.1"

[lints]
workspace = true
